--- a/package.json
+++ b/package.json
@@ -14,15 +14,15 @@
   "dependencies": {
     "@arch-ui/layout": "^0.2.4",
     "@arch-ui/typography": "^0.0.8",
-    "@keystone-alpha/adapter-mongoose": "^6.0.0",
-    "@keystone-alpha/app-admin-ui": "^5.10.2",
-    "@keystone-alpha/app-graphql": "^8.2.0",
-    "@keystone-alpha/app-static": "^1.1.2",
-    "@keystone-alpha/auth-password": "^1.0.5",
-    "@keystone-alpha/fields": "^14.0.0",
-    "@keystone-alpha/fields-wysiwyg-tinymce": "^3.0.9",
-    "@keystone-alpha/file-adapters": "^2.0.1",
-    "@keystone-alpha/keystone": "^16.0.1",
+    "@keystonejs/adapter-mongoose": "^5.0.0",
+    "@keystonejs/app-admin-ui": "^5.0.0",
+    "@keystonejs/app-graphql": "^5.0.0",
+    "@keystonejs/app-static": "^5.0.0",
+    "@keystonejs/auth-password": "^5.0.0",
+    "@keystonejs/fields": "^5.0.0",
+    "@keystonejs/fields-wysiwyg-tinymce": "^5.0.0",
+    "@keystonejs/file-adapters": "^5.0.0",
+    "@keystonejs/keystone": "^5.0.0",
     "@manypkg/cli": "^0.7.0",
     "body-parser": "^1.19.0",
     "chalk": "^2.4.2",
@@ -35,7 +35,7 @@
     "lodash.last": "^3.0.0",
     "multer": "^1.4.2",
     "pug": "^2.0.4",
-    "react": "^16.10.2",
+    "react": "^16.11.0",
     "terminal-link": "^2.0.0"
   }
 }
