--- a/package.json
+++ b/package.json
@@ -1,41 +1,31 @@
 {
   "name": "keystonejs-contrib",
   "version": "1.0.0",
-  "description": "monorepo for keystonejs community projects initiated by Gautam Singh",
+  "description": "monorepo for KeystoneJs community projects initiated by Gautam Singh",
   "author": "KeystoneJS-Contrib Community Development Team",
   "license": "MIT",
   "private": true,
-  "bolt": {
-    "workspaces": [
+  "scripts": {
+    "format:file": "prettier --write",
+    "format": "prettier --write \"**/*.js{,on}\" \"**/*.md\"",
+    "fresh": "yarn clean && yarn",
+    "clean": "manypkg exec rimraf node_modules website/.cache && rimraf node_modules"
+  },
+  "workspaces": {
+    "packages": [
       "packages/*",
       "examples/*"
     ]
   },
   "dependencies": {
-    "@arch-ui/layout": "^0.2.4",
-    "@arch-ui/typography": "^0.0.8",
-    "@keystonejs/adapter-mongoose": "^5.0.0",
-    "@keystonejs/app-admin-ui": "^5.0.0",
-    "@keystonejs/app-graphql": "^5.0.0",
-    "@keystonejs/app-static": "^5.0.0",
-    "@keystonejs/auth-password": "^5.0.0",
-    "@keystonejs/fields": "^5.0.0",
-    "@keystonejs/fields-wysiwyg-tinymce": "^5.0.0",
-    "@keystonejs/file-adapters": "^5.0.0",
-    "@keystonejs/keystone": "^5.0.0",
     "@manypkg/cli": "^0.7.0",
-    "body-parser": "^1.19.0",
-    "chalk": "^2.4.2",
-    "ci-info": "^2.0.0",
-    "cross-env": "^6.0.3",
-    "date-fns": "^1.30.1",
-    "dotenv-safe": "^8.1.0",
-    "express": "^4.17.1",
-    "lodash.every": "^4.6.0",
-    "lodash.last": "^3.0.0",
-    "multer": "^1.4.2",
-    "pug": "^2.0.4",
-    "react": "^16.11.0",
-    "terminal-link": "^2.0.0"
+    "prettier": "^1.18.2",
+    "rimraf": "^2.6.2"
+  },
+  "prettier": {
+    "proseWrap": "preserve",
+    "singleQuote": true,
+    "trailingComma": "es5",
+    "printWidth": 100
   }
 }
