--- a/packages/view/package.json
+++ b/packages/view/package.json
@@ -8,7 +8,6 @@
     "node": ">=8.4.0"
   },
   "dependencies": {
-    "lodash.every": "^4.6.0",
-    "lodash.last": "^3.0.0"
+    "lodash": "^4.17.0"
   }
 }
