--- a/examples/blog-view/package.json
+++ b/examples/blog-view/package.json
@@ -9,14 +9,17 @@
     "node": ">=8.4.0"
   },
   "scripts": {
-    "dev": "cross-env NODE_ENV=development node --inspect --preserve-symlinks -r dotenv-safe/config server.js",
-    "start": "cross-env NODE_ENV=production node -r dotenv-safe/config server.js",
-    "build": "cross-env NODE_ENV=production node -r dotenv-safe/config `yarn bin`/keystone build"
+    "dev": "cross-env NODE_ENV=development DISABLE_LOGGING=true keystone dev",
+    "start": "cross-env NODE_ENV=production keystone start",
+    "build": "cross-env NODE_ENV=production keystone build",
+    "dev:custom": "cross-env NODE_ENV=development node --inspect --preserve-symlinks -r dotenv-safe/config server.js",
+    "start:custom": "cross-env NODE_ENV=production node -r dotenv-safe/config server.js",
+    "build:custom": "cross-env NODE_ENV=production node -r dotenv-safe/config `yarn bin`/keystone build --entry ./index_custom.js"
   },
   "dependencies": {
     "@arch-ui/layout": "^0.2.7",
     "@arch-ui/typography": "^0.0.11",
-    "@keystonejs-contrib/view": "^1.0.0",
+    "@keystonejs-contrib/view": "^1.1.0",
     "@keystonejs/adapter-mongoose": "^5.1.3",
     "@keystonejs/app-admin-ui": "^5.5.2",
     "@keystonejs/app-graphql": "^5.0.2",
