--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     ]
   },
   "dependencies": {
+    "@changesets/cli": "^2.4.1",
     "@manypkg/cli": "^0.9.0",
     "prettier": "^1.18.2",
     "rimraf": "^2.6.2"
