use preconstructfix fields version

--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "format": "prettier --write \"**/*.js{,on}\" \"**/*.md\"",
     "fresh": "yarn clean && yarn",
     "clean": "manypkg exec rimraf node_modules website/.cache && rimraf node_modules",
-    "build": "build-field-types build",
-    "prepare": "manypkg check"
+    "build": "preconstruct build",
+    "prepare": "manypkg check && preconstruct dev"
   },
   "workspaces": {
     "packages": [
@@ -20,10 +20,11 @@
     ]
   },
   "dependencies": {
-    "@changesets/cli": "^2.5.1",
-    "@keystonejs/build-field-types": "^5.2.9",
-    "@manypkg/cli": "^0.11.0",
-    "prettier": "^1.19.1",
+    "@changesets/cli": "^2.10.1",
+    "@keystonejs/build-field-types": "^5.2.11",
+    "@manypkg/cli": "^0.15.0",
+    "@preconstruct/cli": "1.1.27",
+    "prettier": "^2.1.0",
     "rimraf": "^3.0.2"
   },
   "prettier": {
@@ -32,9 +33,12 @@
     "trailingComma": "es5",
     "printWidth": 100
   },
-  "field-types": {
+  "preconstruct": {
     "packages": [
       "packages/fields-ckeditor"
-    ]
+    ],
+    "___experimentalFlags_WILL_CHANGE_IN_PATCH": {
+      "newEntrypoints": true
+    }
   }
 }
