--- a/examples/with-ckeditor/package.json
+++ b/examples/with-ckeditor/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@keystonejs-contrib/example-blog-with-view",
+  "name": "@keystonejs-contrib/example-with-ckeditor",
   "description": "An example KeystoneJS project showcasing a Blogging Site using View and express view engine pug.",
   "private": true,
   "version": "2.0.0",
@@ -12,15 +12,13 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development NODE_OPTIONS=\"-r dotenv/config\" DISABLE_LOGGING=true keystone dev",
     "start": "cross-env NODE_ENV=production NODE_OPTIONS=\"-r dotenv/config\" DISABLE_LOGGING=true  keystone start",
-    "build": "cross-env NODE_ENV=production NODE_OPTIONS=\"-r dotenv/config\"  keystone build",
-    "dev:custom": "cross-env NODE_ENV=development node --inspect --preserve-symlinks -r dotenv-safe/config server.js",
-    "start:custom": "cross-env NODE_ENV=production node -r dotenv-safe/config server.js",
-    "build:custom": "cross-env NODE_ENV=production node -r dotenv-safe/config `yarn bin`/keystone build --entry ./index_custom.js"
+    "build": "cross-env NODE_ENV=production NODE_OPTIONS=\"-r dotenv/config\"  keystone build"
   },
   "dependencies": {
     "@arch-ui/layout": "^0.2.13",
     "@arch-ui/typography": "^0.0.18",
     "@keystonejs-contrib/app-express": "0.2.1",
+    "@keystonejs-contrib/fields-ckeditor": "0.1.1",
     "@keystonejs-contrib/view": "^2.0.0",
     "@keystonejs/adapter-mongoose": "^9.0.7",
     "@keystonejs/app-admin-ui": "^7.0.5",
@@ -28,9 +26,9 @@
     "@keystonejs/app-static": "^5.1.3",
     "@keystonejs/auth-password": "^5.1.10",
     "@keystonejs/fields": "^17.1.3",
-    "@keystonejs/fields-wysiwyg-tinymce": "^5.3.2",
     "@keystonejs/file-adapters": "^7.0.7",
     "@keystonejs/keystone": "^16.0.0",
+    "@keystonejs/server-side-graphql-client": "^1.1.2",
     "body-parser": "^1.19.0",
     "chalk": "^4.0.0",
     "ci-info": "^2.0.0",
