--- a/packages/view/package.json
+++ b/packages/view/package.json
@@ -9,5 +9,6 @@
   },
   "dependencies": {
     "lodash": "^4.17.0"
-  }
+  },
+  "repository": "https://github.com/keystone-contrib/keystone-contrib/tree/master/packages/view"
 }
