--- a/examples/blog-editorjs/package.json
+++ b/examples/blog-editorjs/package.json
@@ -2,7 +2,7 @@
   "name": "@keystonejs-contrib/demo-project-blog",
   "description": "An example KeystoneJS project showcasing a Blogging Site.",
   "private": true,
-  "version": "0.0.0",
+  "version": "7.0.0",
   "author": "The KeystoneJS Development Team",
   "license": "MIT",
   "engines": {
@@ -14,39 +14,36 @@
     "start": "cross-env NODE_ENV=production keystone start"
   },
   "dependencies": {
-    "@apollo/react-hooks": "^3.1.5",
-    "@apollo/react-ssr": "^3.1.5",
-    "@arch-ui/layout": "^0.2.13",
+    "@apollo/client": "^3.3.10",
+    "@arch-ui/layout": "^0.2.14",
     "@arch-ui/typography": "^0.0.18",
-    "@emotion/core": "^10.0.28",
+    "@emotion/core": "^10.1.1",
     "@emotion/styled": "^10.0.27",
     "@keystonejs-contrib/fields-editorjs": "0.1.0",
-    "@keystonejs/adapter-mongoose": "^9.0.7",
-    "@keystonejs/app-admin-ui": "^7.0.5",
-    "@keystonejs/app-graphql": "^6.1.3",
-    "@keystonejs/app-next": "^5.2.0",
+    "@keystonejs/adapter-mongoose": "^11.0.1",
+    "@keystonejs/app-admin-ui": "^7.4.0",
+    "@keystonejs/app-graphql": "^6.2.0",
+    "@keystonejs/app-next": "^6.0.0",
     "@keystonejs/app-static": "^5.1.3",
-    "@keystonejs/auth-password": "^5.1.10",
-    "@keystonejs/fields": "^17.1.3",
-    "@keystonejs/fields-authed-relationship": "^1.0.7",
-    "@keystonejs/fields-markdown": "^5.2.1",
-    "@keystonejs/fields-wysiwyg-tinymce": "^5.3.2",
-    "@keystonejs/file-adapters": "^7.0.7",
-    "@keystonejs/keystone": "^16.0.0",
-    "@keystonejs/oembed-adapters": "^5.1.4",
-    "apollo-cache-inmemory": "^1.6.6",
-    "apollo-client": "^2.6.10",
-    "apollo-upload-client": "^13.0.0",
-    "cross-env": "^7.0.0",
-    "date-fns": "^2.13.0",
+    "@keystonejs/auth-password": "^6.0.1",
+    "@keystonejs/fields": "^22.0.0",
+    "@keystonejs/fields-authed-relationship": "^1.0.17",
+    "@keystonejs/fields-markdown": "^5.2.14",
+    "@keystonejs/fields-oembed": "^3.1.4",
+    "@keystonejs/fields-wysiwyg-tinymce": "^5.3.16",
+    "@keystonejs/file-adapters": "^7.0.8",
+    "@keystonejs/keystone": "^19.2.0",
+    "@keystonejs/server-side-graphql-client": "^2.0.0",
+    "apollo-upload-client": "^14.1.3",
+    "cross-env": "^7.0.3",
+    "date-fns": "^2.17.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "graphql-tag": "^2.10.3",
-    "isomorphic-unfetch": "^3.0.0",
-    "next": "^9.4.4",
-    "node-fetch": "^2.3.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "graphql": "^15.5.0",
+    "isomorphic-unfetch": "^3.1.0",
+    "next": "10.0.7",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
   },
   "repository": "https://github.com/keystone-contrib/keystone-contrib/tree/master/examples/blog-editorjs"
 }
