--- a/package.json
+++ b/package.json
@@ -22,11 +22,21 @@
     ]
   },
   "dependencies": {
+    "@babel/core": "^7.12.17",
+    "@babel/plugin-proposal-class-properties": "^7.12.13",
+    "@babel/plugin-proposal-object-rest-spread": "^7.12.13",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.12.17",
+    "@babel/preset-env": "^7.12.17",
+    "@babel/preset-react": "^7.12.13",
+    "@babel/preset-typescript": "^7.12.17",
+    "@babel/runtime": "^7.12.18",
     "@changesets/cli": "^2.14.1",
     "@manypkg/cli": "^0.17.0",
     "@preconstruct/cli": "2.0.4",
     "prettier": "^2.2.1",
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "typescript": "^4.1.5"
   },
   "prettier": {
     "proseWrap": "preserve",
@@ -36,7 +46,8 @@
   },
   "preconstruct": {
     "packages": [
-      "packages/fields-*"
+      "packages/fields-*",
+      "packages-next/*"
     ],
     "distFilenameStrategy": "unscoped-package-name"
   }
