add logging plugin

--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   "workspaces": {
     "packages": [
       "packages/*",
-      "examples/*"
+      "examples/*",
+      "packages-next/*",
+      "examples-next/*"
     ]
   },
   "dependencies": {
