--- a/packages-next/list-plugins/package.json
+++ b/packages-next/list-plugins/package.json
@@ -10,8 +10,8 @@
     "@babel/plugin-transform-modules-commonjs": "^7.12.13",
     "@babel/runtime": "^7.12.18",
     "@keystone-next/fields": "^5.0.0",
-    "@keystone-next/types": "^13.0.0",
-    "@keystone-next/fields-authed-relationship-legacy": "^1.0.18"
+    "@keystone-next/fields-authed-relationship-legacy": "^1.0.18",
+    "@keystone-next/types": "^13.0.0"
   },
   "devDependencies": {
     "typescript": "^4.1.5"
