--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "proseWrap": "preserve",
     "singleQuote": true,
     "trailingComma": "es5",
-    "printWidth": 100
+    "printWidth": 100,
+    "arrowParens": "avoid"
   },
   "preconstruct": {
     "packages": [
