--- a/examples-next/basic/package.json
+++ b/examples-next/basic/package.json
@@ -26,6 +26,7 @@
     "@keystone-ui/icons": "^2.0.0",
     "@keystone-ui/tooltip": "^2.0.0",
     "@keystonejs-contrib-next/fields-file": "1.0.1",
+    "@keystonejs-contrib-next/list-plugins": "1.1.1",
     "@preconstruct/next": "^2.0.0",
     "@types/react": "^17.0.2",
     "apollo-server-micro": "^2.21.0",
