--- a/examples/blog-editorjs/package.json
+++ b/examples/blog-editorjs/package.json
@@ -41,9 +41,9 @@
     "express": "^4.17.1",
     "graphql": "^15.5.0",
     "isomorphic-unfetch": "^3.1.0",
-    "next": "10.0.8",
+    "next": "^10.2.3",
     "react": "^17.0.2",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.2"
   },
   "repository": "https://github.com/keystone-contrib/keystone-contrib/tree/master/examples/blog-editorjs"
 }
