--- a/examples-next/basic/package.json
+++ b/examples-next/basic/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "license": "MIT",
   "scripts": {
-    "dev": "keystone-next dev",
+    "dev": "NODE_OPTIONS=--inspect keystone-next dev",
     "start": "keystone-next start",
     "build": "keystone-next build"
   },
@@ -13,7 +13,7 @@
     "@graphql-tools/merge": "^6.2.14",
     "@keystone-next/auth": "^28.0.1",
     "@keystone-next/document-renderer": "^3.0.0",
-    "@keystone-next/fields": "^11.0.2",
+    "@keystone-next/fields": "^11.0.3",
     "@keystone-next/fields-document": "^7.0.1",
     "@keystone-next/keystone": "^21.0.2",
     "@keystone-next/types": "^21.0.0",
@@ -22,7 +22,7 @@
     "@keystone-ui/icons": "^4.0.0",
     "@keystone-ui/tooltip": "^4.0.0",
     "@keystonejs-contrib-next/fields-file": "1.0.2",
-    "@keystonejs-contrib-next/list-plugins": "1.1.2",
+    "@keystonejs-contrib-next/list-plugins": "1.1.3",
     "@preconstruct/next": "^3.0.0",
     "@types/react": "^17.0.13",
     "apollo-server-micro": "^2.25.2",
