--- a/packages-next/list-plugins/package.json
+++ b/packages-next/list-plugins/package.json
@@ -2,6 +2,7 @@
   "name": "@keystonejs-contrib-next/list-plugins",
   "description": "List level plugins which can update list config during list initialization including adding additional fields",
   "main": "dist/list-plugins.cjs.js",
+  "module": "dist/list-plugins.esm.js",
   "version": "1.1.3",
   "author": "The KeystoneJS Contrib Development Team",
   "license": "MIT",
