--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "workspaces": {
     "packages": [
       "packages/*",
-      "examples/*",
+      "examples/*"
     ]
   },
   "dependencies": {
