cleanup and rename some projects

--- a/examples-next/basic/package.json
+++ b/examples-next/basic/package.json
@@ -21,8 +21,8 @@
     "@keystone-ui/fields": "^4.1.2",
     "@keystone-ui/icons": "^4.0.0",
     "@keystone-ui/tooltip": "^4.0.0",
-    "@keystonejs-contrib-next/fields-file": "1.0.2",
-    "@keystonejs-contrib-next/list-plugins": "2.0.0",
+    "@k6-contrib/fields-file": "1.0.2",
+    "@k6-contrib/list-plugins": "2.0.0",
     "@preconstruct/next": "^3.0.0",
     "@types/react": "^17.0.13",
     "apollo-server-micro": "^2.25.2",
