--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "keystonejs-contrib",
-  "version": "1.1.0",
-  "description": "monorepo for KeystoneJs community projects initiated by Gautam Singh",
-  "author": "KeystoneJS-Contrib Community Development Team",
+  "name": "k6-contrib",
+  "version": "0.0.0",
+  "description": "monorepo for Keystone 6 community projects initiated by Gautam Singh",
+  "author": "K6-Contrib Community Development Team",
   "private": true,
   "license": "MIT",
-  "repository": "https://github.com/keystone-contrib/keystone-contrib",
-  "homepage": "https://github.com/keystone-contrib/keystone-contrib",
+  "repository": "https://github.com/keystone-contrib/k6-contrib",
+  "homepage": "https://github.com/keystone-contrib/k6-contrib",
   "scripts": {
     "postinstall": "preconstruct dev && manypkg check",
     "format:file": "prettier --write",
@@ -21,8 +21,6 @@
     "packages": [
       "packages/*",
       "examples/*",
-      "packages-next/*",
-      "examples-next/*"
     ]
   },
   "dependencies": {
