--- a/examples/with-tracking/package.json
+++ b/examples/with-tracking/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "keystone-app",
-  "version": "2.0.9",
+  "name": "@k6-contrib/example-with-tracking",
+  "version": "0.0.0",
   "private": true,
   "scripts": {
     "dev": "NODE_OPTIONS=--inspect keystone-next dev",
@@ -15,5 +15,5 @@
     "@keystone-next/keystone": "^21.0.2",
     "typescript": "^4.3.5"
   },
-  "repository": "https://github.com/keystone-contrib/k6-contrib/tree/master/examples/basic2"
+  "repository": "https://github.com/keystone-contrib/k6-contrib/tree/master/examples/with-tracking"
 }
