--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "format:file": "prettier --write",
     "format": "prettier --write \"**/*.js{,on}\" \"**/*.md\"",
     "fresh": "yarn clean && yarn",
-    "clean": "manypkg exec rimraf node_modules website/.cache && rimraf node_modules",
+    "clean": "rimraf \"**/cypress/{screenshots,videos,reports}\" \"**/node_modules\" \"**/yarn-error.log\" \"**/out.log\" \"**/.DS_Store\" \"**/dist\"",
     "build": "preconstruct build",
     "version-packages": "changeset version",
     "publish": "yarn build && yarn changeset publish"
@@ -53,11 +53,5 @@
       "packages-next/*"
     ],
     "distFilenameStrategy": "unscoped-package-name"
-  },
-  "resolutions": {
-    "@prisma/client": "^2.25.0",
-    "@prisma/migrate": "^2.25.0",
-    "@prisma/sdk": "^2.25.0",
-    "prisma": "^2.25.0"
   }
 }
