--- a/packages/fields-s3/package.json
+++ b/packages/fields-s3/package.json
@@ -25,11 +25,13 @@
     "@keystone-ui/icons": "^4.0.0",
     "@keystone-ui/pill": "^5.0.0",
     "@keystone-ui/toast": "^4.0.1",
+    "@sindresorhus/slugify": "^1.1.2",
     "@types/react": "^17.0.14",
     "aws-sdk": "^2.948.0",
     "bytes": "^3.1.0",
     "copy-to-clipboard": "^3.3.1",
     "cuid": "^2.1.8",
+    "filenamify": "^4.3.0",
     "form-data": "4.0.0",
     "fs-extra": "^10.0.0",
     "graphql-upload": "^12.0.0",
