--- a/examples/with-tracking/package.json
+++ b/examples/with-tracking/package.json
@@ -3,16 +3,16 @@
   "version": "0.1.2",
   "private": true,
   "scripts": {
-    "dev": "NODE_OPTIONS=--inspect keystone-next dev",
+    "dev": "NODE_OPTIONS=\"--inspect -r dotenv/config\" keystone-next dev",
     "start": "keystone-next start",
     "build": "keystone-next build"
   },
   "dependencies": {
     "@k6-contrib/list-plugins": "^0.2.0",
-    "@keystone-next/auth": "^30.0.0",
-    "@keystone-next/fields": "^13.0.0",
-    "@keystone-next/fields-document": "^7.0.3",
-    "@keystone-next/keystone": "^23.0.1",
+    "@keystone-next/auth": "^31.0.0",
+    "@keystone-next/fields": "^14.0.0",
+    "@keystone-next/fields-document": "^8.0.0",
+    "@keystone-next/keystone": "^24.0.1",
     "typescript": "^4.3.5"
   },
   "repository": "https://github.com/keystonejs-contrib/k6-contrib/tree/master/examples/with-tracking"
