--- a/examples/azure-file/package.json
+++ b/examples/azure-file/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "@k6-contrib/fields-azure": "^0.1.0",
     "@keystone-next/fields": "^14.0.0",
-    "@keystone-next/keystone": "^24.0.1"
+    "@keystone-next/keystone": "^24.0.1",
+    "cross-env": "^7.0.3"
   },
   "devDependencies": {
     "typescript": "^4.3.5"
