--- a/examples/dimension/package.json
+++ b/examples/dimension/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@k6-contrib/fields-dimension": "^0.0.0",
+    "@k6-contrib/fields-weight": "^0.0.0",
     "@keystone-next/fields": "^14.0.0",
     "@keystone-next/keystone": "^24.0.1"
   },
