--- a/package.json
+++ b/package.json
@@ -34,13 +34,14 @@
     "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "^7.15.0",
     "@babel/runtime": "^7.15.3",
-    "@changesets/cli": "^2.16.0",
+    "@changesets/cli": "^2.17.0",
     "@manypkg/cli": "^0.18.0",
-    "@preconstruct/cli": "2.1.0",
+    "@preconstruct/cli": "2.1.1",
+    "@types/jest": "^27.0.1",
     "dotenv": "^10.0.0",
     "prettier": "^2.3.2",
     "rimraf": "^3.0.2",
-    "typescript": "^4.3.5"
+    "typescript": "^4.4.2"
   },
   "prettier": {
     "proseWrap": "preserve",
