--- a/packages/fields-azure/package.json
+++ b/packages/fields-azure/package.json
@@ -18,14 +18,13 @@
   "dependencies": {
     "@azure/storage-blob": "^12.7.0",
     "@babel/runtime": "^7.15.3",
-    "@keystone-next/types": "^24.0.0",
-    "@keystone-next/utils": "^1.0.4",
-    "@keystone-ui/button": "^5.0.0",
-    "@keystone-ui/core": "^3.1.1",
-    "@keystone-ui/fields": "^4.1.2",
-    "@keystone-ui/icons": "^4.0.0",
-    "@keystone-ui/pill": "^5.0.0",
-    "@keystone-ui/toast": "^4.0.2",
+    "@keystone-next/keystone": "^25.0.1",
+    "@keystone-ui/button": "^5.0.1",
+    "@keystone-ui/core": "^3.2.0",
+    "@keystone-ui/fields": "^4.1.3",
+    "@keystone-ui/icons": "^4.0.1",
+    "@keystone-ui/pill": "^5.0.1",
+    "@keystone-ui/toast": "^4.0.3",
     "@sindresorhus/slugify": "^1.1.2",
     "@types/react": "^17.0.18",
     "bytes": "^3.1.0",
@@ -44,7 +43,7 @@
   "repository": "https://github.com/keystonejs-contrib/k6-contrib/tree/master/packages/fields-azure",
   "devDependencies": {
     "@types/bytes": "^3.1.1",
-    "graphql": "^15.5.1",
+    "graphql": "^15.5.2",
     "mime": "^2.5.2"
   },
   "engines": {
