--- a/packages/fields-azure/package.json
+++ b/packages/fields-azure/package.json
@@ -1,7 +1,9 @@
 {
   "name": "@k6-contrib/fields-azure",
   "description": "Keystone6 Azure Storage File and Image Field Type",
-  "version": "0.1.0",
+  "version": "0.1.1-dev0",
+  "author": "The KeystoneJS Contrib Development Team",
+  "license": "MIT",
   "main": "dist/fields-azure.cjs.js",
   "module": "dist/fields-azure.esm.js",
   "files": [
