--- a/packages/fields-bigint/package.json
+++ b/packages/fields-bigint/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@k6-contrib/fields-bigint",
-  "version": "0.2.0",
+  "version": "0.2.1-dev0",
+  "author": "The KeystoneJS Contrib Development Team",
   "license": "MIT",
   "main": "dist/fields-bigint.cjs.js",
   "module": "dist/fields-bigint.esm.js",
