--- a/packages/fields-dimension/package.json
+++ b/packages/fields-dimension/package.json
@@ -1,7 +1,9 @@
 {
   "name": "@k6-contrib/fields-dimension",
   "description": "Keystone 6 Dimension Field Type",
-  "version": "0.1.0",
+  "version": "0.1.1-dev0",
+  "author": "The KeystoneJS Contrib Development Team",
+  "license": "MIT",
   "main": "dist/fields-dimension.cjs.js",
   "module": "dist/fields-dimension.esm.js",
   "files": [
