--- a/packages/fields-s3/package.json
+++ b/packages/fields-s3/package.json
@@ -1,7 +1,9 @@
 {
   "name": "@k6-contrib/fields-s3",
   "description": "Keystone6 S3 File and Image Field Type",
-  "version": "0.3.0",
+  "version": "0.3.1-dev0",
+  "author": "The KeystoneJS Contrib Development Team",
+  "license": "MIT",
   "main": "dist/fields-s3.cjs.js",
   "module": "dist/fields-s3.esm.js",
   "files": [
