--- a/packages/list-plugins/package.json
+++ b/packages/list-plugins/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@k6-contrib/list-plugins",
   "description": "List level plugins which can update list config during list initialization including adding additional fields",
-  "main": "dist/list-plugins.cjs.js",
-  "module": "dist/list-plugins.esm.js",
-  "version": "0.3.0",
+  "version": "0.3.1-dev0",
   "author": "The KeystoneJS Contrib Development Team",
   "license": "MIT",
+  "main": "dist/list-plugins.cjs.js",
+  "module": "dist/list-plugins.esm.js",
   "dependencies": {
     "@babel/core": "^7.15.0",
     "@babel/plugin-transform-modules-commonjs": "^7.15.0",
