--- a/package.json
+++ b/package.json
@@ -25,19 +25,20 @@
     ]
   },
   "dependencies": {
-    "@babel/core": "^7.15.0",
+    "@babel/core": "^7.15.5",
     "@babel/plugin-proposal-class-properties": "^7.14.5",
     "@babel/plugin-proposal-object-rest-spread": "^7.14.7",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/plugin-transform-runtime": "^7.15.0",
-    "@babel/preset-env": "^7.15.0",
+    "@babel/preset-env": "^7.15.4",
     "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "^7.15.0",
     "@babel/runtime": "^7.15.3",
     "@changesets/cli": "^2.17.0",
     "@manypkg/cli": "^0.18.0",
-    "@preconstruct/cli": "2.1.1",
+    "@preconstruct/cli": "^2.1.2",
     "@types/jest": "^27.0.1",
+    "cross-env": "^7.0.3",
     "dotenv": "^10.0.0",
     "prettier": "^2.3.2",
     "rimraf": "^3.0.2",
