--- a/packages/fields-bigint/package.json
+++ b/packages/fields-bigint/package.json
@@ -1,18 +1,18 @@
 {
   "name": "@k6-contrib/fields-bigint",
-  "version": "0.2.1-dev0",
+  "version": "0.2.0",
   "author": "The KeystoneJS Contrib Development Team",
   "license": "MIT",
   "main": "dist/fields-bigint.cjs.js",
   "module": "dist/fields-bigint.esm.js",
   "dependencies": {
     "@babel/runtime": "^7.15.3",
-    "@keystone-next/keystone": "^25.0.1",
+    "@keystone-next/keystone": "^25.0.3",
     "@keystone-ui/button": "^5.0.1",
     "@keystone-ui/core": "^3.2.0",
     "@keystone-ui/fields": "^4.1.3",
     "@keystone-ui/pill": "^5.0.1",
-    "@types/react": "^17.0.18",
+    "@types/react": "^17.0.20",
     "react": "^17.0.2"
   },
   "devDependencies": {
