--- a/packages/fields-s3/package.json
+++ b/packages/fields-s3/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@k6-contrib/fields-s3",
   "description": "Keystone6 S3 File and Image Field Type",
-  "version": "0.3.1-dev0",
+  "version": "0.3.0",
   "author": "The KeystoneJS Contrib Development Team",
   "license": "MIT",
   "main": "dist/fields-s3.cjs.js",
@@ -19,7 +19,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.15.3",
-    "@keystone-next/keystone": "^25.0.1",
+    "@keystone-next/keystone": "^25.0.3",
     "@keystone-ui/button": "^5.0.1",
     "@keystone-ui/core": "^3.2.0",
     "@keystone-ui/fields": "^4.1.3",
@@ -27,7 +27,7 @@
     "@keystone-ui/pill": "^5.0.1",
     "@keystone-ui/toast": "^4.0.3",
     "@sindresorhus/slugify": "^1.1.2",
-    "@types/react": "^17.0.18",
+    "@types/react": "^17.0.20",
     "aws-sdk": "^2.955.0",
     "bytes": "^3.1.0",
     "copy-to-clipboard": "^3.3.1",
