--- a/packages/list-plugins/package.json
+++ b/packages/list-plugins/package.json
@@ -1,16 +1,15 @@
 {
   "name": "@k6-contrib/list-plugins",
   "description": "List level plugins which can update list config during list initialization including adding additional fields",
-  "version": "0.3.1-dev0",
+  "version": "0.3.0",
   "author": "The KeystoneJS Contrib Development Team",
   "license": "MIT",
   "main": "dist/list-plugins.cjs.js",
   "module": "dist/list-plugins.esm.js",
   "dependencies": {
-    "@babel/core": "^7.15.0",
-    "@babel/plugin-transform-modules-commonjs": "^7.15.0",
+    "@babel/core": "^7.15.5",
     "@babel/runtime": "^7.15.3",
-    "@keystone-next/keystone": "^25.0.1"
+    "@keystone-next/keystone": "^25.0.3"
   },
   "devDependencies": {
     "typescript": "^4.4.2"
