--- a/examples/s3-images/package.json
+++ b/examples/s3-images/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "license": "MIT",
   "scripts": {
-    "dev": "cross-env NODE_OPTIONS=--inspect keystone-next dev",
-    "devb": "cross-env NODE_OPTIONS=--inspect-brk keystone-next dev",
+    "dev": "cross-env NODE_OPTIONS=\"--inspect -r dotenv/config\" keystone-next dev",
+    "devb": "cross-env NODE_OPTIONS=\"--inspect -r dotenv/config\" keystone-next dev",
     "start": "keystone-next start",
     "build": "keystone-next build"
   },
