--- a/package.json
+++ b/package.json
@@ -35,14 +35,14 @@
     "@babel/preset-typescript": "^7.15.0",
     "@babel/runtime": "^7.15.3",
     "@changesets/cli": "^2.17.0",
-    "@manypkg/cli": "^0.18.0",
+    "@manypkg/cli": "0.18.0",
     "@preconstruct/cli": "^2.1.5",
     "@types/jest": "^27.0.2",
     "cross-env": "^7.0.3",
     "dotenv": "^10.0.0",
     "prettier": "^2.4.1",
     "rimraf": "^3.0.2",
-    "typescript": "^4.4.3"
+    "typescript": "^4.4.4"
   },
   "prettier": {
     "proseWrap": "preserve",
