--- a/packages/fields-azure/package.json
+++ b/packages/fields-azure/package.json
@@ -20,11 +20,9 @@
   "dependencies": {
     "@azure/storage-blob": "^12.7.0",
     "@babel/runtime": "^7.15.3",
-    "@keystone-next/keystone": "^27.0.1",
     "@keystone-ui/button": "^5.0.2",
     "@keystone-ui/core": "^3.2.1",
     "@keystone-ui/fields": "^5.0.1",
-    "@keystone-ui/icons": "^4.0.2",
     "@keystone-ui/pill": "^5.0.2",
     "@keystone-ui/toast": "^4.0.4",
     "@sindresorhus/slugify": "^1.1.2",
@@ -32,21 +30,23 @@
     "copy-to-clipboard": "^3.3.1",
     "cuid": "^2.1.8",
     "filenamify": "^4.3.0",
-    "form-data": "4.0.0",
     "fs-extra": "^10.0.0",
     "graphql-upload": "^12.0.0",
     "image-size": "^1.0.0",
-    "image-type": "^4.1.0",
-    "node-fetch": "^2.6.1",
-    "react": "^17.0.2",
-    "url-join": "^4.0.1"
+    "image-type": "^4.1.0"
+  },
+  "peerDependencies": {
+    "@keystone-next/keystone": ">=^27.0.1",
+    "react": "^17.0.2"
   },
   "repository": "https://github.com/keystonejs-contrib/k6-contrib/tree/master/packages/fields-azure",
   "devDependencies": {
+    "@keystone-next/keystone": "^27.0.1",
     "@types/bytes": "^3.1.1",
     "@types/react": "^17.0.34",
     "graphql": "^15.6.1",
-    "mime": "^2.5.2"
+    "mime": "^2.5.2",
+    "react": "^17.0.2"
   },
   "engines": {
     "node": "^12.20 || >= 14.13"
