new changes are working fine without using or exporting withAuth in examples/with-history/keystone.ts file

--- a/packages/history/package.json
+++ b/packages/history/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@k6-contrib/history",
-  "description": "List level plugins which can update list config during list initialization including adding additional fields",
+  "description": "History plugin can create history of lists during list update operation",
   "version": "0.6.0",
   "author": "The KeystoneJS Contrib Development Team",
   "license": "MIT",
