--- a/examples/basic/package.json
+++ b/examples/basic/package.json
@@ -4,29 +4,29 @@
   "private": true,
   "license": "MIT",
   "scripts": {
-    "dev": "cross-env NODE_OPTIONS=--inspect keystone-next dev",
-    "start": "keystone-next start",
-    "build": "keystone-next build"
+    "dev": "cross-env NODE_OPTIONS=--inspect keystone dev",
+    "start": "keystone start",
+    "build": "keystone build"
   },
   "dependencies": {
-    "@babel/runtime": "^7.15.3",
+    "@babel/runtime": "^7.16.3",
     "@k6-contrib/fields-encrypted": "^0.3.0",
     "@k6-contrib/list-plugins": "^0.6.0",
-    "@keystone-next/auth": "^35.0.0",
-    "@keystone-next/document-renderer": "^4.0.1",
-    "@keystone-next/fields-document": "^12.0.0",
-    "@keystone-next/keystone": "^27.0.1",
-    "@keystone-ui/core": "^3.2.1",
-    "@keystone-ui/fields": "^5.0.1",
-    "@keystone-ui/icons": "^4.0.2",
-    "@keystone-ui/tooltip": "^4.0.3",
+    "@keystone-6/auth": "^1.0.0",
+    "@keystone-6/core": "^1.0.0",
+    "@keystone-6/document-renderer": "^1.0.0",
+    "@keystone-6/fields-document": "^1.0.1",
+    "@keystone-ui/core": "^4.0.0",
+    "@keystone-ui/fields": "^6.0.0",
+    "@keystone-ui/icons": "^5.0.0",
+    "@keystone-ui/tooltip": "^5.0.0",
     "@preconstruct/next": "^3.0.1",
-    "@types/react": "^17.0.34",
+    "@types/react": "^17.0.35",
     "apollo-server-micro": "^3.5.0",
     "dotenv": "^10.0.0",
-    "graphql": "^15.6.1",
+    "graphql": "^15.7.2",
     "graphql-tag": "^2.12.5",
-    "next": "^12.0.2",
+    "next": "^12.0.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
