--- a/examples/dimension/package.json
+++ b/examples/dimension/package.json
@@ -4,15 +4,15 @@
   "private": true,
   "license": "MIT",
   "scripts": {
-    "dev": "cross-env NODE_OPTIONS=--inspect keystone-next dev",
-    "devb": "cross-env NODE_OPTIONS=--inspect-brk keystone-next dev",
-    "start": "keystone-next start",
-    "build": "keystone-next build"
+    "dev": "cross-env NODE_OPTIONS=--inspect keystone dev",
+    "devb": "cross-env NODE_OPTIONS=--inspect-brk keystone dev",
+    "start": "keystone start",
+    "build": "keystone build"
   },
   "dependencies": {
     "@k6-contrib/fields-dimension": "^0.5.0",
     "@k6-contrib/fields-weight": "^0.5.0",
-    "@keystone-next/keystone": "^27.0.1"
+    "@keystone-6/core": "^1.0.0"
   },
   "devDependencies": {
     "typescript": "^4.4.4"
