--- a/packages/fields-encrypted/package.json
+++ b/packages/fields-encrypted/package.json
@@ -17,24 +17,24 @@
     ]
   },
   "dependencies": {
-    "@babel/runtime": "^7.15.3",
-    "@keystone-ui/button": "^5.0.2",
-    "@keystone-ui/core": "^3.2.1",
-    "@keystone-ui/fields": "^5.0.1",
-    "@keystone-ui/icons": "^4.0.2",
-    "@keystone-ui/tooltip": "^4.0.3",
+    "@babel/runtime": "^7.16.3",
+    "@keystone-ui/button": "^6.0.0",
+    "@keystone-ui/core": "^4.0.0",
+    "@keystone-ui/fields": "^6.0.0",
+    "@keystone-ui/icons": "^5.0.0",
+    "@keystone-ui/tooltip": "^5.0.0",
     "copy-to-clipboard": "^3.3.1",
     "cryptr": "^6.0.2"
   },
   "peerDependencies": {
-    "@keystone-next/keystone": ">=^27.0.1",
+    "@keystone-6/core": ">=^1.0.0",
     "react": "^17.0.2"
   },
   "repository": "https://github.com/keystonejs-contrib/k6-contrib/tree/master/packages/fields-encrypted",
   "devDependencies": {
-    "@keystone-next/keystone": "^27.0.1",
+    "@keystone-6/core": "^1.0.0",
     "@types/cryptr": "^4.0.1",
-    "@types/react": "^17.0.34",
+    "@types/react": "^17.0.35",
     "react": "^17.0.2"
   },
   "engines": {
