--- a/packages/fields-weight/package.json
+++ b/packages/fields-weight/package.json
@@ -17,27 +17,27 @@
     ]
   },
   "dependencies": {
-    "@babel/runtime": "^7.15.3",
-    "@keystone-ui/button": "^5.0.2",
-    "@keystone-ui/core": "^3.2.1",
-    "@keystone-ui/fields": "^5.0.1",
-    "@keystone-ui/pill": "^5.0.2",
-    "@keystone-ui/segmented-control": "^5.0.1",
-    "@keystone-ui/toast": "^4.0.4",
+    "@babel/runtime": "^7.16.3",
+    "@keystone-ui/button": "^6.0.0",
+    "@keystone-ui/core": "^4.0.0",
+    "@keystone-ui/fields": "^6.0.0",
+    "@keystone-ui/pill": "^6.0.0",
+    "@keystone-ui/segmented-control": "^6.0.0",
+    "@keystone-ui/toast": "^5.0.0",
     "@sindresorhus/slugify": "^1.1.2",
     "copy-to-clipboard": "^3.3.1",
     "cuid": "^2.1.8"
   },
   "peerDependencies": {
-    "@keystone-next/keystone": ">=^27.0.1",
+    "@keystone-6/core": ">=^1.0.0",
     "react": "^17.0.2"
   },
   "repository": "https://github.com/keystonejs-contrib/k6-contrib/tree/master/packages/fields-weight",
   "devDependencies": {
-    "@keystone-next/keystone": "^27.0.1",
+    "@keystone-6/core": "^1.0.0",
     "@types/bytes": "^3.1.1",
-    "@types/react": "^17.0.34",
-    "graphql": "^15.6.1",
+    "@types/react": "^17.0.35",
+    "graphql": "^15.7.2",
     "mime": "^2.5.2",
     "react": "^17.0.2"
   },
