--- a/packages/list-plugins/package.json
+++ b/packages/list-plugins/package.json
@@ -7,14 +7,14 @@
   "main": "dist/list-plugins.cjs.js",
   "module": "dist/list-plugins.esm.js",
   "dependencies": {
-    "@babel/core": "^7.15.5",
-    "@babel/runtime": "^7.15.3"
+    "@babel/core": "^7.16.0",
+    "@babel/runtime": "^7.16.3"
   },
   "peerDependencies": {
-    "@keystone-next/keystone": ">=^27.0.1"
+    "@keystone-6/core": ">=^1.0.0"
   },
   "devDependencies": {
-    "@keystone-next/keystone": "^27.0.1",
+    "@keystone-6/core": "^1.0.0",
     "typescript": "^4.4.4"
   },
   "repository": "https://github.com/keystonejs-contrib/k6-contrib/tree/master/packages/list-plugins"
