--- a/examples/azure-file/package.json
+++ b/examples/azure-file/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "@k6-contrib/fields-azure": "^1.0.0",
     "@keystone-6/core": "^1.0.0",
-    "cross-env": "^7.0.3"
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.0.0"
   },
   "devDependencies": {
     "typescript": "^4.4.4"
