--- a/examples/dimension/package.json
+++ b/examples/dimension/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@k6-contrib/fields-dimension": "^1.0.0",
     "@k6-contrib/fields-weight": "^1.0.0",
-    "@keystone-6/core": "^1.0.0"
+    "@keystone-6/core": "^1.0.0",
+    "dotenv": "^16.0.0"
   },
   "devDependencies": {
     "typescript": "^4.4.4"
