--- a/examples/s3-images/package.json
+++ b/examples/s3-images/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "@k6-contrib/fields-s3-images": "^1.0.0",
-    "@keystone-6/core": "^1.0.0"
+    "@keystone-6/core": "^1.0.0",
+    "dotenv": "^16.0.0"
   },
   "devDependencies": {
     "typescript": "^4.4.4"
