--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
     "format": "prettier --write \"**/*.js{,on}\" \"**/*.md\"",
     "fresh": "yarn clean && yarn",
     "clean": "rimraf \"**/cypress/{screenshots,videos,reports}\" \"**/node_modules\" \"**/yarn-error.log\" \"**/out.log\" \"**/.DS_Store\" \"**/dist\"",
+    "lint:prettier": "prettier --list-different \"**/*.{js,json,ts,tsx}\"",
+    "lint:eslint": "eslint . --ext ts,tsx,js",
+    "lint:types": "tsc",
+    "lint": "yarn lint:eslint && yarn lint:types",
+    "test:unit": "cross-env DISABLE_LOGGING=true NODE_ENV=test jest --no-watchman --runInBand --logHeapUsage",
     "postinstall-examples": "for d in `find examples -type d -maxdepth 1 -mindepth 1`; do echo $d; cd $d; yarn keystone postinstall --fix; cd ../..; done",
     "build": "preconstruct build",
     "changeset": "changeset",
@@ -39,8 +44,12 @@
     "@manypkg/cli": "0.18.0",
     "@preconstruct/cli": "^2.1.5",
     "@types/jest": "^27.0.2",
+    "@typescript-eslint/eslint-plugin": "^5.17.0",
+    "@typescript-eslint/parser": "^5.17.0",
     "cross-env": "^7.0.3",
     "dotenv": "^10.0.0",
+    "eslint": "^8.12.0",
+    "eslint-plugin-jest": "^26.1.3",
     "prettier": "^2.4.1",
     "rimraf": "^3.0.2",
     "typescript": "^4.4.4"
