--- a/packages/fields-azure/package.json
+++ b/packages/fields-azure/package.json
@@ -36,7 +36,7 @@
     "image-type": "^4.1.0"
   },
   "peerDependencies": {
-    "@keystone-6/core": ">=^1.0.0",
+    "@keystone-6/core": "^1.0.0",
     "react": "^17.0.2"
   },
   "repository": "https://github.com/keystonejs-contrib/k6-contrib/tree/master/packages/fields-azure",
