--- a/packages/fields-bigint/package.json
+++ b/packages/fields-bigint/package.json
@@ -11,7 +11,7 @@
     "@keystone-ui/fields": "^6.0.0"
   },
   "peerDependencies": {
-    "@keystone-6/core": ">=^1.0.0",
+    "@keystone-6/core": "^1.0.0",
     "react": "^17.0.2"
   },
   "devDependencies": {
