--- a/packages/fields-dimension/package.json
+++ b/packages/fields-dimension/package.json
@@ -24,7 +24,7 @@
     "@keystone-ui/segmented-control": "^6.0.0"
   },
   "peerDependencies": {
-    "@keystone-6/core": ">=^1.0.0",
+    "@keystone-6/core": "^1.0.0",
     "react": "^17.0.2"
   },
   "repository": "https://github.com/keystonejs-contrib/k6-contrib/tree/master/packages/fields-dimension",
