--- a/packages/list-plugins/package.json
+++ b/packages/list-plugins/package.json
@@ -11,7 +11,7 @@
     "@babel/runtime": "^7.16.3"
   },
   "peerDependencies": {
-    "@keystone-6/core": ">=^1.0.0"
+    "@keystone-6/core": "^1.0.0"
   },
   "devDependencies": {
     "@keystone-6/core": "^1.0.0",
