--- a/examples/azure-file/package.json
+++ b/examples/azure-file/package.json
@@ -14,7 +14,9 @@
     "@k6-contrib/fields-azure": "^1.0.0",
     "@keystone-6/core": "^1.0.0",
     "cross-env": "^7.0.3",
-    "dotenv": "^16.0.0"
+    "dotenv": "^16.0.0",
+    "graphql-upload": "^13.0.0",
+    "react": "^17.0.2"
   },
   "devDependencies": {
     "typescript": "^4.4.4"
