--- a/examples/with-tracking/package.json
+++ b/examples/with-tracking/package.json
@@ -9,12 +9,12 @@
   },
   "dependencies": {
     "@k6-contrib/list-plugins": "^2.0.0",
-    "@keystone-6/auth": "^4.0.0",
-    "@keystone-6/core": "^2.1.0",
-    "@keystone-6/fields-document": "^4.0.0",
+    "@keystone-6/auth": "^5.0.0",
+    "@keystone-6/core": "^3.0.0",
+    "@keystone-6/fields-document": "^5.0.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "typescript": "^4.4.4"
+    "typescript": "~4.7.4"
   },
   "repository": "https://github.com/keystonejs-contrib/k6-contrib/tree/master/examples/with-tracking"
 }
