--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "dotenv": "^16.0.0",
     "prettier": "^2.4.1",
     "rimraf": "^3.0.2",
-    "typescript": "^4.4.4"
+    "typescript": "~4.7.4"
   },
   "prettier": {
     "proseWrap": "preserve",
