updated hooks syntax

--- a/examples/azure-file/package.json
+++ b/examples/azure-file/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "license": "MIT",
   "scripts": {
-    "dev": "cross-env NODE_OPTIONS=--inspect keystone dev",
+    "dev": "keystone dev",
     "devnb": "keystone dev",
     "devb": "cross-env NODE_OPTIONS=--inspect-brk keystone dev",
     "start": "keystone start",
@@ -12,13 +12,13 @@
   },
   "dependencies": {
     "@k6-contrib/fields-azure": "^6.1.0",
-    "@keystone-6/core": "^6.1.0",
+    "@keystone-6/core": "^6.2.0",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.0",
     "graphql": "^16.8.1",
     "graphql-upload": "^15.0.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react": "^18.3.0",
+    "react-dom": "^18.3.0"
   },
   "devDependencies": {
     "typescript": "^5.5.0"
