--- a/examples/dimension/package.json
+++ b/examples/dimension/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "license": "MIT",
   "scripts": {
-    "dev": "cross-env NODE_OPTIONS=--inspect keystone dev",
+    "dev": "keystone dev",
     "devb": "cross-env NODE_OPTIONS=--inspect-brk keystone dev",
     "start": "keystone start",
     "build": "keystone build"
@@ -12,10 +12,10 @@
   "dependencies": {
     "@k6-contrib/fields-dimension": "^6.0.0",
     "@k6-contrib/fields-weight": "^6.0.0",
-    "@keystone-6/core": "^6.1.0",
+    "@keystone-6/core": "^6.2.0",
     "dotenv": "^16.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react": "^18.3.0",
+    "react-dom": "^18.3.0"
   },
   "devDependencies": {
     "typescript": "^5.5.0"
