--- a/examples/s3-file/package.json
+++ b/examples/s3-file/package.json
@@ -4,19 +4,19 @@
   "private": true,
   "license": "MIT",
   "scripts": {
-    "dev": "cross-env NODE_OPTIONS=--inspect keystone dev",
+    "dev": "keystone dev",
     "devb": "cross-env NODE_OPTIONS=--inspect-brk keystone dev",
     "start": "keystone start",
     "build": "keystone build"
   },
   "dependencies": {
-    "@k6-contrib/fields-s3": "^5.0.0",
-    "@keystone-6/core": "^6.1.0",
+    "@k6-contrib/fields-s3": "^6.0.0",
+    "@keystone-6/core": "^6.2.0",
     "dotenv": "^16.0.0",
     "graphql": "^16.8.1",
     "graphql-upload": "^15.0.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react": "^18.3.0",
+    "react-dom": "^18.3.0"
   },
   "devDependencies": {
     "typescript": "^5.5.0"
