--- a/examples/with-tracking/package.json
+++ b/examples/with-tracking/package.json
@@ -3,17 +3,17 @@
   "version": "3.0.0",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_OPTIONS=\"--inspect -r dotenv/config\" keystone dev",
+    "dev": "keystone dev",
     "start": "keystone start",
     "build": "keystone build"
   },
   "dependencies": {
     "@k6-contrib/list-plugins": "^6.0.0",
     "@keystone-6/auth": "^8.0.0",
-    "@keystone-6/core": "^6.1.0",
-    "@keystone-6/fields-document": "^9.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "@keystone-6/core": "^6.2.0",
+    "@keystone-6/fields-document": "^9.1.0",
+    "react": "^18.3.0",
+    "react-dom": "^18.3.0",
     "typescript": "^5.5.0"
   },
   "repository": "https://github.com/keystonejs-contrib/k6-contrib/tree/master/examples/with-tracking"
