--- a/packages/fields-bigint/package.json
+++ b/packages/fields-bigint/package.json
@@ -13,8 +13,8 @@
   },
   "peerDependencies": {
     "@keystone-6/core": "^6.3.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react": "^18.3.0 || ^19.0.0",
+    "react-dom": "^18.3.0 || ^19.0.0"
   },
   "devDependencies": {
     "@keystone-6/core": "^6.3.1",
