--- a/packages/fields-s3images/package.json
+++ b/packages/fields-s3images/package.json
@@ -34,8 +34,8 @@
   "peerDependencies": {
     "@keystone-6/core": "^6.3.1",
     "graphql-upload": "^15.0.2",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react": "^18.3.0 || ^19.0.0",
+    "react-dom": "^18.3.0 || ^19.0.0"
   },
   "repository": "https://github.com/keystonejs-contrib/k6-contrib/tree/master/packages/fields-s3images",
   "devDependencies": {
@@ -47,7 +47,7 @@
     "graphql": "^16.8.1",
     "graphql-upload": "^15.0.2",
     "mime": "^3.0.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react": "^18.3.0",
+    "react-dom": "^18.3.0"
   }
 }
