--- a/packages/fields-encrypted/package.json
+++ b/packages/fields-encrypted/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@k6-contrib/fields-encrypted",
   "description": "Keystone 6 Reversible encryption field",
-  "version": "6.2.0",
+  "version": "7.0.0",
   "author": "The KeystoneJS Contrib Development Team",
   "license": "MIT",
   "main": "dist/fields-encrypted.cjs.js",
@@ -18,24 +18,20 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.27.6",
-    "@keystone-ui/button": "^7.0.2",
-    "@keystone-ui/core": "^5.0.2",
-    "@keystone-ui/fields": "^7.2.0",
-    "@keystone-ui/icons": "^6.0.2",
-    "@keystone-ui/tooltip": "^6.0.2",
+    "@keystar/ui": "0.7.19",
     "copy-to-clipboard": "^3.3.3",
     "cryptr": "^6.3.0"
   },
   "peerDependencies": {
-    "@keystone-6/core": "^6.3.1",
-    "react": "^18.1.0 || ^19.0.0",
-    "react-dom": "^18.1.0 || ^19.0.0"
+    "@keystone-6/core": "^6.5.1",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
   },
   "repository": "https://github.com/keystonejs-contrib/k6-contrib/tree/main/packages/fields-encrypted",
   "devDependencies": {
     "@keystone-6/core": "^6.5.1",
     "@types/cryptr": "^4.0.3",
-    "@types/react": "^19.0.0",
+    "@types/react": "^19.1.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   }
