--- a/packages/fields-s3images/package.json
+++ b/packages/fields-s3images/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@k6-contrib/fields-s3-images",
   "description": "Keystone6 S3 Sharp Optimized Image Field Type",
-  "version": "6.2.0",
+  "version": "7.0.0",
   "author": "The KeystoneJS Contrib Development Team",
   "license": "MIT",
   "main": "dist/fields-s3-images.cjs.js",
@@ -21,11 +21,8 @@
     "@aws-sdk/lib-storage": "^3.832.0",
     "@aws-sdk/s3-request-presigner": "^3.832.0",
     "@babel/runtime": "^7.27.6",
-    "@keystone-ui/button": "^7.0.2",
-    "@keystone-ui/core": "^5.0.2",
-    "@keystone-ui/fields": "^7.2.0",
-    "@keystone-ui/pill": "^7.0.2",
-    "@keystone-ui/toast": "^6.0.2",
+    "@keystar/ui": "0.7.19",
+    "@react-aria/i18n": "^3.12.1",
     "bytes": "^3.1.2",
     "copy-to-clipboard": "^3.3.3",
     "cuid": "^2.1.8",
@@ -34,16 +31,16 @@
     "url-join": "^4.0.1"
   },
   "peerDependencies": {
-    "@keystone-6/core": "^6.3.1",
+    "@keystone-6/core": "^6.5.1",
     "graphql-upload": "^15.0.2",
-    "react": "^18.1.0 || ^19.0.0",
-    "react-dom": "^18.1.0 || ^19.0.0"
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
   },
   "repository": "https://github.com/keystonejs-contrib/k6-contrib/tree/main/packages/fields-s3images",
   "devDependencies": {
     "@keystone-6/core": "^6.5.1",
     "@types/bytes": "^3.1.5",
-    "@types/react": "^19.0.0",
+    "@types/react": "^19.1.0",
     "@types/sharp": "^0.32.0",
     "@types/url-join": "^4.0.3",
     "graphql": "^16.8.1",
