--- a/packages/fields-editorjs/package.json
+++ b/packages/fields-editorjs/package.json
@@ -18,29 +18,31 @@
     ]
   },
   "dependencies": {
-    "@babel/runtime": "^7.26.0",
-    "@editorjs/editorjs": "^2.30.7",
+    "@babel/runtime": "^7.27.6",
+    "@editorjs/editorjs": "^2.30.8",
     "@editorjs/header": "^2.8.8",
-    "@editorjs/list": "^2.0.2",
+    "@editorjs/list": "^2.0.8",
+    "@keystar/ui": "0.7.19",
     "@keystone-ui/button": "^7.0.2",
     "@keystone-ui/core": "^5.0.2",
     "@keystone-ui/fields": "^7.2.0",
     "@keystone-ui/icons": "^6.0.2",
     "@keystone-ui/tooltip": "^6.0.2",
     "copy-to-clipboard": "^3.3.3",
-    "cryptr": "^6.3.0"
+    "cryptr": "^6.3.0",
+    "editorjs-drag-drop": "^1.1.16"
   },
   "peerDependencies": {
     "@keystone-6/core": "^6.3.1",
     "react": "^18.1.0 || ^19.0.0",
     "react-dom": "^18.1.0 || ^19.0.0"
   },
-  "repository": "https://github.com/keystonejs-contrib/k6-contrib/tree/master/packages/fields-editorjs",
+  "repository": "https://github.com/keystonejs-contrib/k6-contrib/tree/main/packages/fields-editorjs",
   "devDependencies": {
-    "@keystone-6/core": "^6.3.1",
+    "@keystone-6/core": "^6.5.1",
     "@types/cryptr": "^4.0.3",
-    "@types/react": "^19.0.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "@types/react": "^19.1.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
   }
 }
