--- a/packages/fields-editorjs/package.json
+++ b/packages/fields-editorjs/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@k6-contrib/fields-editorjs",
   "description": "Keystone 6 Reversible encryption field",
-  "version": "6.2.0",
+  "version": "7.0.0",
   "author": "The KeystoneJS Contrib Development Team",
   "license": "MIT",
-  "private": true,
+  "private": false,
   "main": "dist/fields-editorjs.cjs.js",
   "module": "dist/fields-editorjs.esm.js",
   "files": [
